Fix action header wrapping to break on word

--- a/packages/terra-action-header/src/ActionHeaderContainer.module.scss
+++ b/packages/terra-action-header/src/ActionHeaderContainer.module.scss
@@ -54,7 +54,7 @@
     margin-top: 0;
     padding-top: var(--terra-action-header-title-padding-top, 0.1428571429rem);
     width: 100%;
-    word-break: break-all;
+    word-break: break-word;
     word-wrap: normal;
   }
 }
